Fixing demo links not working on gh-pages
Dropping abspath from vulcanize as it always changes the demo links to an absolute path, which doesn't work on github
Changing all imports to use relative paths
Chagning demo links to relative paths
Removing README as gulp-vulcanize works when not using abspath
Moving original index from src as relative paths are not maintained correctly by vulcanize

--- a/components/code-prism/code-prism.html
+++ b/components/code-prism/code-prism.html
@@ -1,5 +1,5 @@
-<script src="/bower_components/prism/prism.js"></script>
-<link href="/bower_components/prism/themes/prism.css" rel="stylesheet">
+<script src="../../bower_components/prism/prism.js"></script>
+<link href="../../bower_components/prism/themes/prism.css" rel="stylesheet">
 
 <dom-module is="code-prism">
   <style>
