--- a/components/hash-menu/hash-menu.html
+++ b/components/hash-menu/hash-menu.html
@@ -1,5 +1,5 @@
-<link href="/bower_components/paper-item/paper-item.html" rel="import">
-<link href="/bower_components/paper-menu/paper-menu.html" rel="import">
+<link href="../../bower_components/paper-item/paper-item.html" rel="import">
+<link href="../../bower_components/paper-menu/paper-menu.html" rel="import">
 
 <dom-module id="hash-menu">
   <style>
