Add more DOM node types to perf tests.
For v8, this pushes the cached data access into the megamorphic state which better captures the cost of the data lookup.

--- a/perf/list/css/style.css
+++ b/perf/list/css/style.css
@@ -1,6 +1,8 @@
 #list {
   display: flex;
   flex-direction: column;
+
+  padding: 0;
 }
  
 .message {
@@ -20,6 +22,10 @@
 .checkbox::before {
   content: "\2610";
   margin: 4px;
+}
+
+.star {
+  all: initial;
 }
 
 .star::before {
